tests/functional/lang/parse-fail-unexpected-inherit.err
error: syntax error, unexpected 'inherit', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.inherit
             |   ^
            2|
